# ComputationalGeometryLesson

./: CMakeLists.txt  README.md  point.h  search.cpp  search.h  test.cpp
include/: cg_math.h  convex_hull.h  edge.h  point.h
src/: cg_math.cpp  convex_hull.cpp  visibility_graph.cpp
test/: test.cpp
